
2007-10-29  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: dbus-server-object.c, dbus-server-object.h,
		xvidcap-dbus-client.c: added doxygen
		comments

2007-10-25  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* configure.in, Makefile.am, src: 
		dbus-server-object.c, xvidcap-dbus.xml,
		dbus-server-object.h, gnome_ui.c,
		xvidcap-dbus-client.c, Makefile.am:
		make dbus activation work (make sure
		you can write your video file)
	* src: xtoffmpeg.c, capture.c, job.c: code
		cleanup and additional debug output
	* depcomp, INSTALL, COPYING, missing, aclocal.m4,
		install-sh: new autotools version
	* doc/xvidcap/de/figures/xvidcap-warning.png:
		added image to svn

2007-10-24  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: dbus-server-object.c, xvidcap-dbus.xml,
		dbus-server-object.h, xvidcap-dbus-client.c:
		added start, stop, pause remote functions
		to dbus server.
	* src: xvidcap-dbus-client.c, Makefile.am:
		integrate xvidcap-dbus-client in normal
		build

2007-10-23  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* net.jarre_de_the.Xvidcap.service.in, Makefile.am,
		src: dbus-server-object.c, 
		dbus-server-object.h, Makefile.am, 
		xvidcap-infos.xml: prototype for
		dbus support
	* Makefile.am, src: dbus-server-object.c, 
		xvidcap-dbus.xml, dbus-server-object.h, 
		xvidcap-dbus-client.c, app_data.c, 
		app_data.h, Makefile.am, xvidcap-infos.xml:
		dbus prototype works, now
	* src/capture.c: Solaris does not have extutil.h

2007-10-22  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/app_data.c: reimplemented passing of
		environment variables to spawned 
		processes (e. g. animate/play) to
		make it work independant of the shell
	* src: colors.h, app_data.c, xtoxwd.c, 
		gnome_options.c: some fixes for 
		compiling with DEBUG=1
	* src: gnome_ui.c, gnome_ui.h: code cleanup

2007-09-13  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/gnome_frame.c: fixed bug where resizing
		the capture frame on one side would
		change the other end, too.
